# -*- tab-width: 2; indent-tabs-mode: nil; coding: utf-8 -*-
===========================
 GridDataFormats CHANGELOG
===========================

The rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - don't reproduce every git log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting
  * accompany each entry with github issue/PR number (Issue #xyz)

------------------------------------------------------------------------------
??/??/?? 

  * 0.3.1

  Enhancements

  Changes

  Fixes

09/10/22 kain88-de, holocronweavers, orbeckst

  * 0.3.0

  Enhancements

  * Python 3 compatible (issue #5)
  * added subset of CCP4 format (reading)

  Changes

  * unit tests and coverage
  * docs at http://www.mdanalysis.org/GridDataFormats/ are always in
    sync with the master branch,
    http://griddataformats.readthedocs.org are for releases


For previous releases please see the log messages in the git
history. For authors see the file AUTHORS.