@@ -139,11 +139,19 @@ class gridpositions(DXclass):
         self.component = 'positions'
         self.shape = numpy.asarray(shape)      # D dimensional shape
         self.origin = numpy.asarray(origin)    # D vector
-        self.delta = numpy.asarray(delta)      # DxD array of grid spacings
         self.rank = len(self.shape)            # D === rank
-        if self.delta.shape != (self.rank,self.rank):
-            # check OpenDX specs for irreg spacing
-            raise NotImplementedError('Only regularly spaced grids allowed.')
+
+        self.delta = numpy.asarray(delta)      # DxD array of grid spacings
+        # gridDataFormats  actually provides a simple 1D array with the deltas because only
+        # regular grids are used but the following is a reminder that OpenDX should be able
+        # to handle more complicated volume elements
+        if len(self.delta.shape) == 1:
+            self.delta = numpy.diag(delta)
+        if self.delta.shape != (self.rank, self.rank):
+            # check OpenDX specs for irreg spacing if we want to implement
+            # anything more complicated
+            raise NotImplementedError('Only regularly spaced grids allowed, '
+                                      'not delta={}'.format(self.delta))
     def write(self,file):
         DXclass.write(self,file,
                       ('counts '+self.ndformat(' %d')) % tuple(self.shape))
