@@ -28,6 +28,7 @@ setup(name="GridDataFormats",
       packages=find_packages(exclude=[]),
       package_data={},
       install_requires=['numpy>=1.0.3', 'six'],
+      tests_require=['nose', 'tempdir', 'numpy'],
       # extras can be difficult to install through setuptools and/or
       # you might prefer to use the version available through your
       # packaging system
